--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Boredmedico Pages # name of the site
+title: BOREDMEDICO PAGES # name of the site
 author: Yash Desai # name of site's author
 email: boredmedico@gmail.com # email of site's author
 url: boredmedico.com # root address of the site
